// VMM-specific gRPC extension service.
//
// Provides full VM creation, snapshot management, live updates, and metrics
// that are beyond the scope of the arcbox.v1.MachineService interface.

syntax = "proto3";

package vmm.v1;

// =============================================================================
// VmmService
// =============================================================================

// VmmService exposes Firecracker-specific operations.
service VmmService {
    // Create a VM with the full Firecracker parameter set.
    // Use this instead of MachineService.Create when you need fine-grained
    // control over devices, rate limiters, CPU templates, etc.
    rpc CreateVm(CreateVmRequest) returns (CreateVmResponse);

    // Pause a running VM.
    rpc Pause(PauseVmRequest) returns (Empty);

    // Resume a paused VM.
    rpc Resume(ResumeVmRequest) returns (Empty);

    // Create a full or diff snapshot.
    rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);

    // List snapshots for a VM.
    rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);

    // Restore a VM from a snapshot.
    rpc RestoreSnapshot(RestoreSnapshotRequest) returns (RestoreSnapshotResponse);

    // Delete a snapshot.
    rpc DeleteSnapshot(DeleteSnapshotRequest) returns (Empty);

    // Get VM metrics (balloon stats).
    rpc GetMetrics(GetMetricsRequest) returns (VmMetrics);

    // Adjust memory balloon target size.
    rpc UpdateBalloon(UpdateBalloonRequest) returns (Empty);

    // Update balloon statistics polling interval.
    rpc UpdateBalloonStatsInterval(UpdateBalloonStatsIntervalRequest) returns (Empty);

    // Update hotplug memory size.
    rpc UpdateMemory(UpdateMemoryRequest) returns (Empty);

    // Hot-swap a drive path or update its rate limiter.
    rpc UpdateDrive(UpdateDriveRequest) returns (Empty);

    // Update rate limiters on a network interface.
    rpc UpdateNetworkInterface(UpdateNetworkInterfaceRequest) returns (Empty);

    // Flush metrics to disk immediately.
    rpc FlushMetrics(FlushMetricsRequest) returns (Empty);
}

// =============================================================================
// Common
// =============================================================================

// Empty response / request.
message Empty {}

// =============================================================================
// Rate-limiter primitives (shared across CreateVm + live-update RPCs)
// =============================================================================

// Token-bucket configuration for a rate limiter.
message TokenBucket {
    // Bucket capacity in bytes (bandwidth) or operations (ops).
    int64 size = 1;
    // Refill interval in milliseconds.
    int64 refill_time_ms = 2;
    // One-time burst allowance (absent = no burst).
    optional int64 one_time_burst = 3;
}

// Combined rate limiter with separate bandwidth and ops buckets.
message RateLimiter {
    // Bandwidth (bytes/s) limit. Absent = unlimited.
    optional TokenBucket bandwidth = 1;
    // IOPS limit. Absent = unlimited.
    optional TokenBucket ops = 2;
}

// =============================================================================
// Device configuration messages (used inside CreateVmRequest)
// =============================================================================

// Configuration for a non-root block device.
message DriveConfig {
    // Unique drive ID within the VM.
    string drive_id = 1;
    // Absolute path to the image file on the host.
    string path = 2;
    // Mount read-only.
    bool readonly = 3;
    // IO engine: "sync" (default) or "async".
    string io_engine = 4;
    // Cache mode: "unsafe" (default) or "writeback".
    string cache_type = 5;
    // GPT partition UUID (optional).
    optional string partuuid = 6;
    // Rate limiter (optional).
    optional RateLimiter rate_limit = 7;
}

// Memory balloon device configuration.
message BalloonConfig {
    // Target balloon size in MiB.
    int64 amount_mib = 1;
    // Deflate on guest OOM.
    bool deflate_on_oom = 2;
    // Statistics polling interval in seconds (absent = disabled).
    optional int64 stats_polling_interval_s = 3;
    // Enable free-page hinting.
    optional bool free_page_hinting = 4;
    // Enable free-page reporting.
    optional bool free_page_reporting = 5;
}

// Virtio-vsock device configuration.
message VsockConfig {
    // Guest CID (must be >= 3).
    int64 guest_cid = 1;
}

// Virtio-mem hotpluggable memory configuration.
message MemHotplugConfig {
    // Maximum hotpluggable memory in MiB.
    int64 total_size_mib = 1;
    // Slot size in MiB (default 128).
    optional int64 slot_size_mib = 2;
    // Minimum allocation unit in MiB (default 2).
    optional int64 block_size_mib = 3;
}

// MMDS (Microvm Metadata Service) configuration.
message MmdsConfig {
    // Network interfaces that can reach the MMDS endpoint.
    repeated string network_interfaces = 1;
    // API version: "v1" (default) or "v2".
    string version = 2;
    // Override the MMDS IP (default "169.254.169.254").
    optional string ipv4_address = 3;
    // Enable EC2 IMDS compatibility.
    bool imds_compat = 4;
}

// =============================================================================
// CreateVm â€” full-parameter VM creation
// =============================================================================

// Full VM creation request with all Firecracker-configurable parameters.
// Fields that are absent or zero fall back to the daemon defaults defined in
// the [defaults] section of config.toml.
message CreateVmRequest {
    // Human-readable name (must be unique).
    string name = 1;

    // --- Boot ---
    // Kernel image path (empty = daemon default).
    string kernel = 2;
    // initrd path (optional).
    optional string initrd = 3;
    // Kernel command-line arguments (empty = daemon default).
    string boot_args = 4;

    // --- Machine ---
    // vCPU count (0 = daemon default).
    uint32 vcpus = 5;
    // Memory in MiB (0 = daemon default).
    uint64 memory_mib = 6;
    // Enable simultaneous multithreading.
    bool smt = 7;
    // Track dirty pages (required for diff snapshots).
    bool track_dirty_pages = 8;
    // CPU template: "C3", "T2", "T2S", "T2CL", "T2A", "V1N1", or "" (none).
    string cpu_template = 9;
    // Huge pages: "" (none) or "2M".
    string huge_pages = 10;

    // --- Root drive ---
    // Root filesystem image path (empty = daemon default).
    string rootfs = 11;
    // Mount the root drive read-only.
    bool root_readonly = 12;
    // IO engine for root drive: "sync" or "async".
    string root_io_engine = 13;
    // Cache mode for root drive: "unsafe" or "writeback".
    string root_cache_type = 14;
    // GPT partition UUID for root drive (optional).
    optional string root_partuuid = 15;
    // Rate limiter for root drive (optional).
    optional RateLimiter root_rate_limit = 16;

    // --- Additional block devices ---
    repeated DriveConfig extra_drives = 17;

    // --- Network rate limiters ---
    // Receive rate limiter for the primary network interface.
    optional RateLimiter net_rx_rate_limit = 18;
    // Transmit rate limiter for the primary network interface.
    optional RateLimiter net_tx_rate_limit = 19;

    // --- Optional devices ---
    // Memory balloon (absent = disabled).
    optional BalloonConfig balloon = 20;
    // Virtio-vsock (absent = disabled).
    optional VsockConfig vsock = 21;
    // Attach virtio-rng entropy device.
    bool entropy_device = 22;
    // Redirect serial console output to this host path.
    optional string serial_out = 23;
    // Virtio-mem hotpluggable memory (absent = disabled).
    optional MemHotplugConfig memory_hotplug = 24;
    // MMDS configuration (absent = disabled).
    optional MmdsConfig mmds = 25;

    // --- Provisioning ---
    // SSH public key injected via MMDS.
    optional string ssh_public_key = 26;
}

// Response for CreateVm.
message CreateVmResponse {
    // Assigned VM ID.
    string id = 1;
}

// =============================================================================
// Pause / Resume
// =============================================================================

// Request to pause a VM.
message PauseVmRequest {
    // VM ID.
    string id = 1;
}

// Request to resume a VM.
message ResumeVmRequest {
    // VM ID.
    string id = 1;
}

// =============================================================================
// Snapshots
// =============================================================================

// Request to create a snapshot.
message CreateSnapshotRequest {
    // VM ID.
    string id = 1;
    // Optional human-readable label.
    string name = 2;
    // Snapshot type: "full" (default) or "diff".
    string snapshot_type = 3;
}

// Response for CreateSnapshot.
message CreateSnapshotResponse {
    // Snapshot ID.
    string snapshot_id = 1;
    // Snapshot directory path on host.
    string snapshot_dir = 2;
    // Creation timestamp (RFC3339).
    string created_at = 3;
}

// Request to list snapshots for a VM.
message ListSnapshotsRequest {
    // VM ID.
    string id = 1;
}

// Response for ListSnapshots.
message ListSnapshotsResponse {
    repeated SnapshotSummary snapshots = 1;
}

// Summary of a single snapshot.
message SnapshotSummary {
    // Snapshot ID.
    string id = 1;
    // VM ID.
    string vm_id = 2;
    // Optional label.
    string name = 3;
    // "full" or "diff".
    string snapshot_type = 4;
    // vmstate file path.
    string vmstate_path = 5;
    // Memory file path (empty for diff snapshots).
    string mem_path = 6;
    // Creation timestamp (RFC3339).
    string created_at = 7;
}

// Request to restore a VM from a snapshot.
message RestoreSnapshotRequest {
    // Name to assign the restored VM.
    string name = 1;
    // Path to snapshot directory.
    string snapshot_dir = 2;
    // Whether to assign a fresh TAP interface.
    bool network_override = 3;
}

// Response for RestoreSnapshot.
message RestoreSnapshotResponse {
    // ID of the newly-restored VM.
    string id = 1;
}

// Request to delete a snapshot.
message DeleteSnapshotRequest {
    // VM ID.
    string vm_id = 1;
    // Snapshot ID.
    string snapshot_id = 2;
}

// =============================================================================
// Metrics
// =============================================================================

// Request VM metrics.
message GetMetricsRequest {
    // VM ID.
    string id = 1;
}

// VM metrics response.
message VmMetrics {
    // VM ID.
    string vm_id = 1;
    // Balloon target in MiB (-1 if no balloon device).
    int64 balloon_target_mib = 2;
    // Actual balloon size in MiB (-1 if unknown).
    int64 balloon_actual_mib = 3;
}

// =============================================================================
// Live Updates
// =============================================================================

// Request to update balloon target size.
message UpdateBalloonRequest {
    // VM ID.
    string id = 1;
    // New target size in MiB.
    int64 amount_mib = 2;
}

// Request to update balloon statistics polling interval.
message UpdateBalloonStatsIntervalRequest {
    // VM ID.
    string id = 1;
    // New polling interval in seconds (0 = disable).
    int64 stats_polling_interval_s = 2;
}

// Request to update hotplug memory size.
message UpdateMemoryRequest {
    // VM ID.
    string id = 1;
    // Requested size in MiB.
    int64 size_mib = 2;
}

// Request to hot-swap a drive or update its rate limiter.
message UpdateDriveRequest {
    // VM ID.
    string id = 1;
    // Drive ID (e.g., "rootfs" or a custom drive_id).
    string drive_id = 2;
    // New host path for the drive image (absent = keep current path).
    optional string path_on_host = 3;
    // Updated rate limiter (absent = keep current limits).
    optional RateLimiter rate_limit = 4;
}

// Request to update rate limiters on a network interface.
message UpdateNetworkInterfaceRequest {
    // VM ID.
    string id = 1;
    // Interface ID (e.g., "eth0").
    string iface_id = 2;
    // Updated receive rate limiter (absent = keep current limits).
    optional RateLimiter rx_rate_limit = 3;
    // Updated transmit rate limiter (absent = keep current limits).
    optional RateLimiter tx_rate_limit = 4;
}

// Request to flush metrics to disk immediately.
message FlushMetricsRequest {
    // VM ID.
    string id = 1;
}
